kustomize/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: cloudacademy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: staging.52.226.225.31.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /gitops
        backend:
          service:
            name: webapp-svc
            port:
              number: 80
